--- a/nginx_rmwebsite.conf
+++ b/nginx_rmwebsite.conf
@@ -1,7 +1,7 @@
 
 server {
   listen 80;
-  server_name github.com;
+  server_name kxcoster.github.io;
 
   root "/path/to/project_folder"; # Change path to folder with downloaded source
   index index.html;
@@ -10,28 +10,26 @@ server {
   autoindex off;
   charset utf-8;
 
-  location /kabk/go-theses-20-kiki-coster {
+  location / {
     if (-f $request_filename ) {
       break;
     }
 
     if ($args ~ "_escaped_fragment_") {
-      rewrite ^/kabk/go-theses-20-kiki-coster/([.a-zA-Z0-9-]+)/? /kabk/go-theses-20-kiki-coster/snippets/$1.html last;
-      rewrite ^/kabk/go-theses-20-kiki-coster/ /kabk/go-theses-20-kiki-coster/snippets/1.html last;
+      rewrite ^/([.a-zA-Z0-9-]+)/? /snippets/$1.html last;
+      rewrite ^/ /snippets/1.html last;
     }
 
-    location = /kabk/go-theses-20-kiki-coster {
+    location = / {
       if ($args ~ "_escaped_fragment_") {
-        rewrite ^/kabk/go-theses-20-kiki-coster /kabk/go-theses-20-kiki-coster/snippets/1.html last;
+        rewrite ^/ /snippets/1.html last;
       }
 
       
-      return 301 /kabk/go-theses-20-kiki-coster/;
-      
     }
 
-    rewrite ^/kabk/go-theses-20-kiki-coster/?$ /kabk/go-theses-20-kiki-coster/index.html last;
-    rewrite ^/kabk/go-theses-20-kiki-coster/[.a-zA-Z0-9-]+(/(.*))? /kabk/go-theses-20-kiki-coster/$2 last;
+    rewrite ^/?$ /index.html last;
+    rewrite ^/[.a-zA-Z0-9-]+(/(.*))? /$2 last;
 
     try_files $uri $uri/;
   }
